Done with integration and QA

--- a/lang/en.json
+++ b/lang/en.json
@@ -787,7 +787,7 @@
         "subscribe": "Subscribe to our newsletter",
         "subscribe_intro": "Get the latest updates on new products and upcoming sales",
         "subscribe_submit": "SIGN UP",
-        "email_placeholder": "Email Address",
+        "email_placeholder": "Email address",
         "subscribed_heading": "Thanks for Subscribing!",
         "subscribed_heading_error": "Oops...",
         "subscribed_message": "Thank you for joining our mailing list. You'll be sent the next issue of our newsletter shortly",
@@ -804,7 +804,7 @@
     "search": {
         "quick_search": {
             "input_label": "Search",
-            "input_placeholder": "Search the store"
+            "input_placeholder": "Search Products"
         },
         "results": {
             "form_label": "Search Keyword:",
